# image-tensor-converter

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pyproject.toml
src/package_name/: __init__.py
tests/: test_sanity.py
